--- a/src/app/pages/beranda/beranda.page.html
+++ b/src/app/pages/beranda/beranda.page.html
@@ -41,12 +41,12 @@
           <ion-icon style="font-size: 65px;" name="person-circle"></ion-icon>
         </div>
         <div class="flex-1">
-          <div class="font-bold text-xl">{{ berber.name }}</div>
-          <div class="text-medium">{{ barber.address }}</div>
+          <div class="font-bold text-xl">{{ barber.name }}</div>
           <div class="flex">
             <div class="mr-2 text-medium">Buka:</div>
             <div>09.00 - 21.00</div>
           </div>
+          <div class="text-medium">{{ barber.address }}</div>
         </div>
         <div class="text-right">
           <div class="p-2 pt-1 pb-1 bg-primary text-on-primary text-center rounded-full">Buka</div>
