--- a/src/app/pages/tabs.page.html
+++ b/src/app/pages/tabs.page.html
@@ -7,7 +7,7 @@
 
     <ion-tab-button tab="pesanan">
       <ion-icon name="file-tray"></ion-icon>
-      <ion-label>Pesanan</ion-label>
+      <ion-label>Pesanan Aktif</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="riwayat">
