add update barber

--- a/src/app/pages/public/pesanan/pesanan.page.html
+++ b/src/app/pages/public/pesanan/pesanan.page.html
@@ -1,11 +1,11 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar class="toolbar-title-default md in-toolbar hydrated">
-    <ion-title class="text-3xl pt-4">
-      Pemesanan
+  <ion-toolbar>
+    <ion-title class="text-3xl ion-padding">
+      Pemesanan Aktif
     </ion-title>
   </ion-toolbar>
-  <ion-toolbar class="pl-4 pr-4 pt-3">
-    <ion-searchbar mode="ios" color="light" class="ion-no-padding" clearIcon="close-sharp" debounce="100">
+  <ion-toolbar>
+    <ion-searchbar mode="ios" color="light" class="ion-padding" clearIcon="close-sharp" debounce="100">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
