--- a/src/app/pages/shared/ubah-barber/ubah-barber.page.html
+++ b/src/app/pages/shared/ubah-barber/ubah-barber.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border drop-shadow-md">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start" class="-mr-4">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -8,49 +8,83 @@
 </ion-header>
 
 
-<ion-content color="primary" class="bg-primary">
-  <ion-card class="rounded-lg ion-margin">
+<ion-content color="primary" class="bg-primary ion-padding">
+
+  <ion-card mode="ios" class="ion-no-margin rounded-xl">
     <form [formGroup]="barberForm" (submit)="update()">
-      <ion-list class="ion-padding rounded-lg">
-        <ion-item class="ion-no-padding">
-          <ion-label position="stacked">Detail</ion-label>
-          <ion-textarea formControlName="detail" placeholder="Tuliskan Nama Lengkap Anda"></ion-textarea>
-        </ion-item>
-
-        <h6>Jam Kerja</h6>
-
-        <ng-container formArrayName="workingHours">
-          <ng-container *ngFor="let workingHour of workingHours.controls; index as i;">
-            <div class="border border-light rounded-lg ion-margin-bottom">
-              <ion-item [formGroupName]="i" lines="none" style="--background: none;">
-                <ion-label position="stacked">{{dayOfWeek[i]}}</ion-label>
-                <ion-select mode="ios" formControlName="close" placeholder="Pilih buka/tutup">
-                  <ion-select-option [value]="false">Buka</ion-select-option>
-                  <ion-select-option [value]="true">Tutup</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <div *ngIf="!workingHours.controls[i].get('close').value" class="w-full grid grid-cols-2 gap-3 ion-padding-start ion-padding-end ion-padding-bottom" style="font-size: 14pt;">
-                <div (click)="openModalHourStart(modalHourStarEnd, i)">
-                  <small class="text-medium">Jam Buka</small>
-                  <div class="text-primary"><b>{{workingHours.controls[i].get('hourStart').value | date:'HH:mm'}}</b></div>
+      <ion-accordion-group [multiple]="true" [value]="['detail', 'jam', 'ulasan']">
+        <ion-accordion value="detail">
+          <ion-item slot="header" class="bg-light-tint">
+            <ion-label><b>Detail</b></ion-label>
+          </ion-item>
+          <ion-item slot="content">
+            <ion-textarea rows="5" formControlName="detail" placeholder="Tuliskan detail tentang barber anda">
+            </ion-textarea>
+          </ion-item>
+        </ion-accordion>
+        <ion-accordion value="detail">
+          <ion-item slot="header" class="bg-light-tint">
+            <ion-label><b>Harga</b></ion-label>
+          </ion-item>
+          <ion-item slot="content" class="ion-margin-bottom ion-margin-top">
+            <div slot="start" class="">Rp</div>
+            <ion-input formControlName="price" type="number" placeholder="Tulis harga"></ion-input>
+            <div slot="end" class="border-l pl-3 text-medium">Per Orang</div>
+          </ion-item>
+        </ion-accordion>
+        <ion-accordion value="jam">
+          <ion-item slot="header" class="bg-light-tint">
+            <ion-label><b>Jam Kerja</b></ion-label>
+          </ion-item>
+          <div slot="content" class="ion-margin">
+            <ng-container formArrayName="workingHours">
+              <ng-container *ngFor="let workingHour of workingHours.controls; index as i;">
+                <div class="border border-light rounded-lg ion-margin-bottom">
+                  <ion-item [formGroupName]="i" lines="none" style="--background: none;">
+                    <ion-label position="stacked">{{dayOfWeek[i]}}</ion-label>
+                    <ion-select mode="ios" formControlName="close" placeholder="Pilih buka/tutup">
+                      <ion-select-option [value]="false">Buka</ion-select-option>
+                      <ion-select-option [value]="true">Tutup</ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <div *ngIf="!workingHours.controls[i].get('close').value"
+                    class="w-full grid grid-cols-2 gap-3 ion-padding-start ion-padding-end ion-padding-bottom"
+                    style="font-size: 14pt;">
+                    <div (click)="openModalHourStart(modalHourStarEnd, i)">
+                      <small class="text-medium">Jam Buka</small>
+                      <div class="text-primary"><b>{{(workingHours.controls[i].get('hourStart').value | date:'HH:mm') ||
+                          '-'}}</b></div>
+                    </div>
+                    <div class="ion-text-right" (click)="openModalHourEnd(modalHourStarEnd, i)">
+                      <small class="text-medium">Jam Tutup</small>
+                      <div class="text-primary"><b>{{(workingHours.controls[i].get('hourEnd').value | date:'HH:mm') ||
+                          '-'}}</b></div>
+                    </div>
+                  </div>
                 </div>
-                <div class="ion-text-right">
-                  <small class="text-medium">Jam Tutup</small>
-                  <div class="text-primary"><b>{{workingHours.controls[i].get('hourEnd').value | date:'HH:mm'}}</b></div>
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </ng-container>
-        <ion-button type="submit" mode="ios" color="primary" class="w-full ion-no-margin">
+              </ng-container>
+            </ng-container>
+          </div>
+          <!-- <ion-list slot="content" class="ion-margin-bottom">
+            <ion-item *ngFor="let j of [0,1,2,3,4,5,6]">
+              <ion-label>{{dayOfWeek[j]}}</ion-label>
+              <ion-label slot="end">09:00 - 21:00</ion-label>
+            </ion-item>
+          </ion-list> -->
+        </ion-accordion>
+      </ion-accordion-group>
+      <hr class="bg-light">
+      <div class="ion-padding">
+        <ion-button type="submit" [disabled]="barberForm.invalid" mode="ios" color="primary" class="w-full ion-no-margin">
           <b [class.opacity-0]="updateLoading">Simpan</b>
           <ion-spinner [class.opacity-0]="!updateLoading" class="absolute"></ion-spinner>
         </ion-button>
-      </ion-list>
+      </div>
     </form>
   </ion-card>
 
-  <ion-modal #modalHourStarEnd class="items-end" style="--height: 341px;" (onDidDismiss)="modalHourStartEndDidDismiss()">
+  <ion-modal #modalHourStarEnd class="items-end" style="--height: 341px;"
+    (onDidDismiss)="modalHourStartEndDidDismiss()">
     <ng-template>
       <ion-header>
         <ion-toolbar>
@@ -59,11 +93,12 @@
               <ion-icon slot="icon-only" name="close"></ion-icon>
             </ion-button>
           </ion-buttons>
-          <ion-title>Pilih Waktu</ion-title>
+          <ion-title>Pilih Jam {{modalHourStartEndName == 'hourStart'? 'Buka' : 'Tutup'}}</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-datetime [(ngModel)]="modalHourStartEndValue" presentation="time" locale="id-ID" style="max-width: 100%;"></ion-datetime>
+        <ion-datetime [(ngModel)]="modalHourStartEndValue" presentation="time" locale="id-ID" style="max-width: 100%;">
+        </ion-datetime>
         <div class="grid grid-cols-2 gap-2 ion-padding">
           <ion-button mode="ios">Batal</ion-button>
           <ion-button mode="ios" (click)="selectHourStartEnd(modalHourStarEnd)">Pilih</ion-button>
