--- a/src/app/pages/public/beranda/beranda.page.html
+++ b/src/app/pages/public/beranda/beranda.page.html
@@ -1,13 +1,13 @@
 <ion-header *ngIf="userData.role == 'user'" class="ion-no-border">
-  <ion-toolbar class="toolbar-title-default md in-toolbar hydrated">
-    <ion-title class="text-3xl pt-4">
+  <ion-toolbar>
+    <ion-title class="text-3xl ion-padding">
       Beranda
     </ion-title>
   </ion-toolbar>
-  <ion-toolbar class="pl-4 pr-4 pt-3">
-    <ion-searchbar mode="ios" color="light" class="ion-no-padding" clearIcon="close-sharp" debounce="100">
+  <ion-toolbar>
+    <ion-searchbar mode="ios" color="light" class="ion-padding" clearIcon="close-sharp" debounce="100">
     </ion-searchbar>
-    <div class="flex gap-3">
+    <div class="flex gap-3 ion-padding-start ion-padding-end ion-padding-bottom">
       <div id="modallocation" class="p-2 pl-3 pr-3 border rounded-full border-primary flex">
         <div class="mr-1 text-primary flex items-center">
           <ion-icon name="location"></ion-icon>
@@ -36,27 +36,27 @@
       <div *ngIf="(barbers$ | async) as barbers">
         <ng-container *ngIf="barbers.length > 0; else noBarbers">
           <div *ngFor="let barber of barbers; trackBy: trackByFn"
-            class="ion-padding bg-background drop-shadow-lg items-center rounded-xl" routerLink="/detail-tukang-cukur">
-            <div class="flex items-center gap-3">
-              <div class="text-medium">
-                <ion-icon style="font-size: 65px;" name="person-circle"></ion-icon>
+            class="ion-padding bg-background drop-shadow-lg items-center rounded-xl">
+            <div class="flex items-center gap-3" routerLink="/detail-barber">
+              <div class="bg-primary rounded-full" style="width: 60px; height: 60px; overflow: hidden;">
+                <img src="assets/images/test.webp" alt="">
               </div>
               <div class="flex-1">
-                <div class="text-xl ion-text-capitalize"><b>{{ barber.name }}</b></div>
-                <div>09.00 - 21.00 <span class="text-danger">(Tutup)</span></div>
-                <div class="text-medium">{{ barber.address }}</div>
+                <div class="ion-text-capitalize"><b>{{ barber.name }}</b></div>
+                <div><small>09.00 - 21.00 <span class="text-danger">(Tutup)</span></small></div>
+                <div class="text-medium"><small>{{ barber.address }}</small></div>
               </div>
               <ion-icon name="chevron-forward" style="font-size: 14pt;"></ion-icon>
             </div>
-            <hr class="bg-light">
+            <hr class="bg-light mt-3 mb-3">
             <div class="flex gap-3 items-center -mb-1">
-              <div class="text-xl flex-1 text-primary"><b>Rp. 50.000,-</b></div>
-              <div class="flex justify-end">
-                <div class="mr-1 text-warning">
-                  <ion-icon name="star"></ion-icon>
+              <div class="flex-1" routerLink="/detail-barber">
+                <div class="flex-1 flex-shrink-0 text-primary mb-1"><b>Rp. 15.000,-</b></div>
+                <div class="flex gap-1 items-center">
+                  <ion-icon *ngFor="let s of [1,1,1,1,0]" [color]="s? 'warning' : 'medium'" name="star"></ion-icon>
                 </div>
-                <div>4.9</div>
               </div>
+              <ion-button mode="ios" class="w-full ion-no-margin" style="max-width: 150px;" routerLink="/pesan-sekarang">Pesan Sekarang</ion-button>
             </div>
           </div>
         </ng-container>
@@ -67,17 +67,17 @@
       </div>
     </div>
     <div *ngSwitchCase="'barber'" class="h-full flex flex-col gap-3">
-      <div [ngClass]="userData.roleDetail?.active?  'bg-primary' : 'bg-medium'" class="flex items-center ion-padding text-on-primary rounded-xl">
+      <div [ngClass]="userData.barber?.active?  'bg-primary' : 'bg-medium'" class="flex items-center ion-padding text-on-primary rounded-xl">
         <div class="flex-1">
           <small>Selamat Datang</small>
           <h4 class="ion-no-margin">Tember Lamberta</h4>
           <div class="flex items-center gap-2 mt-1">
-            <div [ngClass]="userData.roleDetail?.active? 'bg-success' : 'bg-light'" class="rounded-full" style="height: 10px; width: 10px;"></div>
-            <small>Sedang {{userData.roleDetail?.active? '' : 'Tidak'}} Aktif</small>
+            <div [ngClass]="userData.barber?.active? 'bg-success' : 'bg-light'" class="rounded-full" style="height: 10px; width: 10px;"></div>
+            <small>Sedang {{userData.barber?.active? '' : 'Tidak'}} Aktif</small>
           </div>
         </div>
-        <ion-button [ngClass]="userData.roleDetail?.active? 'bg-on-primary' : 'bg-light'" class="ion-no-margin ion-no-padding flex rounded-full" style="height: auto;" (click)="activateDeactivate()">
-          <ion-icon slot="icon-only" [color]="userData.roleDetail?.active? 'primary' : 'medium'" name="power" style="font-size: 30pt; margin: 10px;"></ion-icon>
+        <ion-button [ngClass]="userData.barber?.active? 'bg-on-primary' : 'bg-light'" class="ion-no-margin ion-no-padding flex rounded-full" style="height: auto;" (click)="activateDeactivate()">
+          <ion-icon slot="icon-only" [color]="userData.barber?.active? 'primary' : 'medium'" name="power" style="font-size: 30pt; margin: 10px;"></ion-icon>
         </ion-button>
       </div>
       <div class="ion-text-center ion-padding border border-light rounded-xl">
@@ -94,11 +94,12 @@
       <div>
         <h4><b>Permintaan Pemesanan</b></h4>
         <div>
-          <div *ngFor="let p of [1,2]" class="ion-margin-bottom bg-background drop-shadow-lg rounded-xl ion-padding">
+          <div *ngFor="let p of [1]" class="ion-margin-bottom bg-background drop-shadow-lg rounded-xl ion-padding">
             <div class="flex items-center gap-2 ion-margin-bottom">
-              <div class="bg-primary rounded-full" style="height: 50px; width: 50px;"></div>
+              <div class="bg-primary rounded-full" style="height: 50px; width: 50px;">
+                <img class="rounded-full" src="assets/images/test.webp"></div>
               <div class="flex-1">
-                <div>Singgih Jarjid</div>
+                <div><b>Singgih Jarjid</b></div>
                 <!-- <div class="text-medium"><small>082445887849</small></div> -->
                 <div class="truncate-2">
                   <small>Rumah singgih arek sambigede nasional</small>
@@ -116,8 +117,10 @@
               </div>
             </div>
             <div class="flex items-center gap-3">
-              <ion-button mode="ios" fill="outline" color="danger" (click)="rejectOrder(p)">Tolak</ion-button>
-              <ion-button mode="ios" color="primary" class="flex-1" (click)="acceptOrder(p)">Terima</ion-button>
+              <ion-button mode="ios" fill="outline" color="danger" class="ion-no-margin" (click)="rejectOrder(p)">
+                <ion-icon name="close"></ion-icon>
+              </ion-button>
+              <ion-button mode="ios" fill="outline" color="primary" class="flex-1" class="ion-no-margin w-full" (click)="acceptOrder(p)">Terima</ion-button>
             </div>
           </div>
         </div>
