--- a/src/app/pages/public/riwayat/riwayat.page.html
+++ b/src/app/pages/public/riwayat/riwayat.page.html
@@ -1,12 +1,11 @@
-<ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar class="toolbar-title-default md in-toolbar hydrated">
-    <ion-title class="text-3xl pt-4">
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <ion-title class="text-3xl ion-padding">
       Riwayat
     </ion-title>
   </ion-toolbar>
-
-  <ion-toolbar class="pl-4 pr-4 pt-3 flex">
-    <ion-searchbar mode="ios" color="light" class="ion-no-padding" clearIcon="close-sharp" debounce="100">
+  <ion-toolbar>
+    <ion-searchbar mode="ios" color="light" class="ion-padding" clearIcon="close-sharp" debounce="100">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
@@ -30,13 +29,13 @@
           </div>
         </div>
         <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-    
+
         <div class="flex ">
           <div class="flex-1">
             <div class="text-medium">Pemesan</div>
             <div class="text-2xl font-bold">Anya Geraldine</div>
           </div>
-    
+
           <div class="text-right flex-0">
             <div class="text-xl font-bold">13.00</div>
             <div class="text-medium truncate">23 Des 2022</div>
@@ -57,10 +56,10 @@
               <ion-icon name="chevron-forward"></ion-icon>
             </div>
           </div>
-    
+
         </div>
-    
-    
+
+
       </div>
     </ng-container>
     <ng-template #noHistories>
