--- a/src/app/pages/shared/pesan-sekarang/pesan-sekarang.page.html
+++ b/src/app/pages/shared/pesan-sekarang/pesan-sekarang.page.html
@@ -1,89 +1,69 @@
-<ion-header>
-  <ion-toolbar class="--bg-primary">
-    <ion-title class="text-on-primary">Pesan Sekarang</ion-title>
+<ion-header class="ion-no-border drop-shadow-md">
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start" class="-mr-4">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title class="text-bold">Pesan Sekarang</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="--bg-primary">
+<ion-content color="primary" class="ion-padding">
+  <div class="ion-text-center">
+    <img class="rounded-full ion-margin" style="width: 110px; height: 110px;" src="assets/images/test.webp">
 
-  <div>
-   <div class="relative flex justify-center items-center" style="margin-bottom: 200px;">
-    <div class="absolute" style="transform: translateY(120px); width: 110px; height:110px;">
-      <img class="rounded-lg" src="assets/images/test.webp">
-    </div>
-  </div>
-
-  <div class="text-center" style="margin-bottom: 30px ;">
-    <div class="text-xl flex justify-center">
-      <div class="text-warning">
-        <ion-icon name="star-sharp"></ion-icon>
+    <div class="text-center" style="margin-bottom: 30px ;">
+      <div class="flex justify-center gap-1 mb-2">
+        <ion-icon *ngFor="let s of [1,1,1,1,0]" [color]="s? 'warning' : 'light'" name="star"></ion-icon>
       </div>
-      <div>4.9</div>
+      <div class="text-xl font-bold">Fernanda Reza Aditya</div>
+      <div class="text-sm">Kota Malang, Kec. Lowokwaru</div>
+      <div class="text-sm">098182736234</div>
     </div>
-    <div class="text-xl font-bold">Fernanda Reza Aditya</div>
-    <div class="text-on-primary text-sm">Kota Malang, Kec. Lowokwaru</div>
-    <div class="text-on-primary text-sm">098182736234</div>
   </div>
-</div>
 
 
-<div class="bg-white w-full h-full pt-4" style="border-radius: 30px 30px 0px 0px;">
+  <ion-card mode="ios" class="ion-no-margin">
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">Pesan Sekarang</ion-card-title>
+      <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+    </ion-card-header>
+    <ion-card-content class="ion-margin-top">
+      <div class="flex">
+        <div class="flex-1">
+          <h2><b>Malang</b></h2>
+          <div>Jumlah Pesanan</div>
+        </div>
+        <div class="items-center border rounded-xl border-light-shade flex">
 
-  <div class="ion-padding">
-    <div class="font-bold text-center text-xl">
-      Pesan Sekarang
-    </div>
-
-    <div class="text-xl font-bold mt-4">Kota Malang</div>
-  
-
-  <div class="flex justify-between">
-    <div class="mt-2 text-medium">Jumlah Pesanan</div>
-    <div class="items-center border-b border-light-shade flex">
-      
-      <div style="padding: 10px 13px" class=" border border-light-shade">-</div>  
-      <div>
-        <ion-input class="input-jumlah text-center border border-light-shade" value="2" style="width: 40px;">
-          
-        </ion-input>
+          <div style="padding: 10px 13px">-</div>
+          <div>
+            <ion-input class="ion-no-padding input-jumlah text-center border-l border-r border-light-shade" value="2" style="width: 40px;"></ion-input>
+          </div>
+          <div style="padding: 10px 13px">+</div>
+        </div>
       </div>
-      <div style="padding: 10px 13px" class=" border border-light-shade">+</div>
-    </div>
-  </div>
-
-  <hr class= "mt-4 mb-4" style="border-top:1px solid #999;">
-
-    <div class="font-bold mb-1">Detail Harga</div>
-  <div class="text-medium">
-    <div class="flex justify-between">
-      <div>Jasa Potong Rambut</div>
-      <div>Rp. 50.000,-</div>
-    </div>
-    <div class="flex justify-between">
-      <div>Transport</div>
-      <div>Rp. 10.000,-</div>
-    </div>
-    <div class="flex justify-between">
-      <div>Jumlah Pesanan</div>
-      <div>2x</div>
-    </div>  
-  </div>
-
-  <hr class= "mt-4 mb-4" style="border-top:1px solid #999;">
-
-  <div class="font-bold flex justify-between">
-    <div>Total Harga</div>
-    <div>Rp. 60.000,-</div>
-  </div>
-
-  </div>
-
-</div>
-
+      <hr class="mt-3 mb-3">
+      <h2><b>Detail Harge</b></h2>
+      <div class="text-medium">
+        <div class="flex justify-between">
+          <div>Jasa Potong Rambut</div>
+          <div>Rp. 50.000,-</div>
+        </div>
+        <div class="flex justify-between">
+          <div>Transport</div>
+          <div>Rp. 10.000,-</div>
+        </div>
+        <div class="flex justify-between">
+          <div>Jumlah Pesanan</div>
+          <div>2x</div>
+        </div>
+      </div>
+      <hr class="bg-light mt-3 mb-3">
+      <div class="flex justify-between">
+        <h2><b>Total Harge</b></h2>
+        <div><b>Rp. 60.000,-</b></div>
+      </div>
+    </ion-card-content>
+  </ion-card>
+  <ion-button mode="ios" color="warning" class="w-full ion-no-margin ion-margin-top">Pesan Sekarang</ion-button>
 </ion-content>
-
-<ion-toolbar >
-<div class="ion-padding" routerLink="/detail-pemesanan"> 
-<ion-button class="w-full" color="warning">Pesan Sekarang</ion-button>
-</div> 
-</ion-toolbar>
